[tool.poetry]
name = 'fastapi-sqlalchemy-async'
version = '0.0.1'
description = 'FastAPI-Sqlalchemy integration with async support'
authors = [ 'Ariel Carvajal <arie.cbpro@gmail.com>' ]
license = 'MIT'
packages = [
    { include = 'fastapi_sqlalchemy_async' },
]
classifiers = [
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

[tool.poetry.dependencies]
python = '^3.7'

# main deps
sqlalchemy = { version = '^1.4.0b1', allow-prereleases = true }

[tool.poetry.dev-dependencies]
# lint
flake8 = '^3.8.4'
mypy = '^0.790'
pylint = '^2.6.0'
autopep8 = '^1.5.4'

# tests
pytest = '^6.2.1'

# packaging
setuptools = '^51.1.0'
wheel = '^0.36.2'
twine = '^3.3.0'

[build-system]
requires = [ 'poetry-core>=1.0.0' ]
build-backend = 'poetry.core.masonry.api'
