[build-system]
requires = ['flit_core >=2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'fastapi_sqlalchemy_async'
author = 'Ariel Carvajal'
author-email = 'arie.cbpro@gmail.com'
description-file = 'README.md'
home-page = 'https://github.com/patiprecios/fastapi-sqlalchemy-async'
license = 'MIT'
requires-python = '>=3.7'
requires = [
    'sqlalchemy >=1.4.0b1'
]
classifiers = [
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python',
    'Topic :: Database',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Typing :: Typed',
]

[tool.flit.metadata.requires-extra]
test = [
    # lint
    'flake8 >=3.8.4',
    'mypy >=0.790',
    'pylint >=2.6.0',
    'autopep8 >=1.5.4',

    # tests
    'pytest >=6.2.1',
    'docker >=4.4.4',
]
postgresql = ['asyncpg']
mysql = ['aiomysql']
sqlite = ['aiosqlite']
postgresql-aiopg = ['aiopg']

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-vs'
testpaths = [
    'tests'
]